# hobby-portfolio

./: Cargo.toml  README.md  temperature_data.csv  temperature_log.csv
Kierrosaika/: Cargo.toml  laps.txt
Kierrosaika/html/: index.html
Lämpö/: README.md
laptime/: laps.json  sim_rfid.txt
laptime/src/: main.rs
src/: main.rs
static/: index.html
Älykoti/: README.MD  main.c  prj.conf
