[package]
name = "laptime"
version = "0.1.0"
edition = "2021"


[dependencies]
# Actix-web tarjoaa HTTP-palvelimen ja REST API -rajapinnat.
actix-web = "4.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
chrono = { version = "0.4.39", features = ["serde"] }
actix-files = "0.6.6"
clap = { version = "4.5.29", features = ["derive"] }
actix-cors = "0.7.0"
log = "0.4.25"        # Varmista t채m채 rivi
env_logger = "0.11.6" # Varmista t채m채 rivi (tai uudempi versio)
serialport = "4.7.0"
tokio = { version = "1.43.0", features = ["full"] }